--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -8,11 +8,12 @@ auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=node_modules/karma-coverage/node_modules/istanbul/node_modules/js-yaml/node_modules/argparse/node_modules/lodash/internal
 browser.autorefresh.Chrome.INTEGRATED=true
 browser.highlightselection.Chrome.INTEGRATED=true
-file.reference.github-angular-form-validator=.
+file.reference.github-ngFormValidator=.
+file.reference.github-ngformvalidator=.
 files.encoding=UTF-8
 grunt.action.build=build
 grunt.action.clean=clean
 grunt.action.rebuild=clean build
-site.root.folder=${file.reference.github-angular-form-validator}
-start.file=coverage/coverage-report/index.html
+site.root.folder=${file.reference.github-ngFormValidator}
+start.file=Gruntfile.js
 web.context.root=/
