--- a/package.json
+++ b/package.json
@@ -28,30 +28,30 @@
     "url": "http://adipa-g.github.io/ngFormValidator/issues"
   },
   "devDependencies": {
-    "grunt": "~0.4.4",
-    "grunt-browser-sync": "~2.1.3",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-copy": "~0.8.2",
-    "grunt-contrib-jshint": "^0.11.3",
-    "grunt-contrib-uglify": "~0.9.2",
-    "grunt-contrib-watch": "~0.6.1",
+    "core-js": "^3.26.1",
+    "grunt": "^1.5.3",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-clean": "^2.0.1",
+    "grunt-contrib-concat": "^2.1.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-jshint": "^3.2.0",
+    "grunt-contrib-uglify": "^5.2.2",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-jsbeautifier": "^0.2.13",
-    "grunt-karma": "~0.11.0",
-    "karma": "^0.12.37",
-    "karma-chrome-launcher": "~0.1.2",
-    "karma-coffee-preprocessor": "~0.2.1",
-    "karma-coverage": "^0.4.2",
-    "karma-firefox-launcher": "~0.1.7",
-    "karma-html2js-preprocessor": "~0.1.0",
-    "karma-jasmine": "~0.3.8",
-    "karma-phantomjs-launcher": "~0.2.3",
-    "karma-requirejs": "~0.2.6",
-    "karma-script-launcher": "~0.1.0",
-    "load-grunt-tasks": "~3.2.0",
+    "grunt-karma": "^4.0.2",
+    "karma": "^6.4.1",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-coffee-preprocessor": "^1.0.1",
+    "karma-coverage": "^2.2.0",
+    "karma-html2js-preprocessor": "^1.1.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-requirejs": "^1.1.0",
+    "karma-script-launcher": "^1.0.0",
+    "load-grunt-tasks": "^5.1.0",
     "phantomjs": "^2.1.7",
-    "requirejs": "~2.1.22",
-    "time-grunt": "~1.2.2"
+    "requirejs": "^2.3.6",
+    "time-grunt": "^2.0.0"
   },
   "main": "Gruntfile.js",
   "directories": {
